plugins {
    id "java"
    id "application"
    id "antlr"
}
group = "com.arc.mpl"
version = "0.1.0-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    antlr "org.antlr:antlr4:4.13.2"
    compileOnly "org.projectlombok:lombok:1.18.36"
    annotationProcessor "org.projectlombok:lombok:1.18.36"
    implementation "org.slf4j:slf4j-api:2.0.16"
    runtimeOnly "org.slf4j:slf4j-simple:2.0.16"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.18.2"
    testImplementation platform("org.junit:junit-bom:5.11.4")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testCompileOnly "org.projectlombok:lombok:1.18.36"
    testAnnotationProcessor "org.projectlombok:lombok:1.18.36"
}

application {
    mainClass = "com.arc.mpl.cli.MplCli"
    applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

generateGrammarSource {
    arguments += ["-visitor", "-no-listener"]
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
